--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-shell": "^1.1.2",
+    "grunt-checktextdomain": "^1.0.0",
+    "grunt-po2mo": "^0.1.2",
+    "grunt-pot": "^0.2.1",
     "shell": "^0.3.2"
   },
   "description": "",
