--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "apppresser",
   "version": "2.2.0",
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "grunt": ">=1.3.0",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-uglify": "^0.11.0",
